minor graphic adjustments